axion-ui/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
  namespace: axion-app
spec:
  selector:
    app: ui-deployment
  ports:
  - port: 80
    targetPort: 80
