axion-ui/manifests/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress-ui
  namespace: axion-app
  labels:
    app.kubernetes.io/name: ui-ingress
  annotations:
    appgw.ingress.kubernetes.io/health-probe-path: "/"
    appgw.ingress.kubernetes.io/cookie-based-affinity: "false"
    appgw.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  ingressClassName: azure-application-gateway

  rules:
    - host: bhawani.shop
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ui-service
                port:
                  number: 80
